fixed form wrap

--- a/styles/mallContact.scss
+++ b/styles/mallContact.scss
@@ -22,6 +22,8 @@
     @include s.flex(column,flex-start,flex-start,nowrap);
     padding-block: 10rem;
     color: $whiteR;
+    flex-grow: 1;
+    margin-bottom: 25rem;
 
     p{
         padding-left:6rem;
@@ -53,10 +55,12 @@
 
 //right side styles
 .contactRightSide{
-    width: 72%;
     padding: 5rem;
     position: relative;
     bottom: 10rem;
+
+    width: clamp(80rem,70vw,100rem);
+    flex-grow: 1;
 }
 
 .formWrapper{
@@ -71,7 +75,7 @@
     box-shadow: 2rem 2rem 0px 0px $sunYellow;
     padding-block: 10rem;
 
-    margin-top: -26rem;
+    margin-top: -15%;
 
     input[type="text"]{
         color: $whiteR;
